# hdx-cli-toolkit

./: .gitignore  2024-02-06-iom-dtm.csv  2024-05-17-irc-ethopia-example.json  2024-06-11-worldpop-1.csv  2024-06-11-worldpop-2.csv  2024-06-11-worldpop-prod.csv  2024-06-11-worldpop.csv  DEMO.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  USERGUIDE.md  pyproject.toml
.github/workflows/: dev_pipeline.yaml  publish.yaml
config/: .coveragerc
scripts/: 2025-06-24-data-quality-mr.csv  data_grid_recipes_compiler.py  data_quality_benchmark.py  data_quality_lucky_dip.py  irc-ethiopia.sh
src/hdx_cli_toolkit/: ckan_utilities.py  cli.py  data_quality_utilities.py  hapi_utilities.py  hdx_utilities.py  stable_schema_utilities.py  utilities.py
src/hdx_cli_toolkit/data/: 2025-05-13-datagrid-datasets.csv
tests/: cli_shell_test.sh  conftest.py  test_ckan_utilities.py  test_cli.py  test_cli_integration.py  test_data_quality_utilities.py  test_hdx_utilities.py  test_hdx_utilities_integration.py  test_integration.py  test_utilities.py
tests/fixtures/: 2024-08-24-hdx-snapshot-filtered.json  2025-05-15-sample-data-quality_reports.json  admin1-summaries-flood.csv  attributes-list.json  attributes-single.json  attributes.csv  gibraltar-healthsites-data-quality-report.json  gibraltar_with_extras.json  hdx_dataset_static.yaml  healthsites.json  quickchart-flood.json  test-3.csv  update-from-file-redo.csv  update-from-file.csv
